Learning method added